--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <title>Iniciar Sesión</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="estilos.css">
+    <script src="assets/login.js"></script>
 </head>
 <body>
 
@@ -23,7 +23,7 @@
                     <label for="clave" class="form-label">Contraseña</label>
                     <input type="password" class="form-control" id="clave" placeholder="••••••••" required>
                 </div>
-                <button type="submit" class="btn btn-primary w-100">Ingresar</button>
+                <button type="button" class="btn btn-primary w-100" onclick="logear()">Ingresar</button>
             </form>
             <div class="text-center mt-3">
                 <small>¿No tienes cuenta? <a href="registro.html">Regístrate aquí</a></small>
@@ -34,4 +34,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
